--- a/labs.html
+++ b/labs.html
@@ -10,22 +10,17 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "jquery.musepolyfill.bgsize.js", "labs.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "require.js", "labs.css"], "outOfDate":[]};
 </script>
   
-  <link rel="shortcut icon" href="images/favicon.ico?crc=3993744308"/>
+  <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>Labs</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=298971941"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=32922217"/>
-  <link rel="stylesheet" type="text/css" href="css/labs.css?crc=97312352" id="pagesheet"/>
-  <!-- Other scripts -->
-  <script type="text/javascript">
-   var __adobewebfontsappname__ = "muse";
-</script>
+  <link rel="stylesheet" type="text/css" href="css/labs.css?crc=4091296754" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://webfonts.creativecloud.com/quicksand:n4,i4:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/mR3rmSvPw5bA1BnOgneaRIeBPi2C-uBcxLBqv55_CsSfe1XJoS7HfyJTwRIUF2bowDFLwDiq5Qs8FcF8jQMkFRqDjR63F2IUZeB8jcBRF2gKF2J-HPG0dc8XjhyyZcI0dA9Cdc8XjhyyZcI0dA9CiaiaOcoTieFGjAZyOcu8J6iXZW4l-AoyH6GJl0JgIMMjgPMgP6sFiWF8qMY3TLc4g6.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/gkyax4assqAfOt-g8n9kXJj03uuitJJJmoad3dKZax9feGqgf5WHK6GPHQJUwQbX5QwDWDwaZ2qXZQZRZAI3wRjowhJtw2bUwAsyZA4yjDb3jRbkeKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6M9GIQWmDZZMgvSVoKbj.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -43,21 +38,21 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <a class="nonblock nontext clearfix grpelem" id="u154-4" href="about.html" data-href="page:U2777"><!-- content --><p id="u154-2"><span class="sporting" id="u154">ABOUT</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="index.html" data-href="page:U68"><!-- content --><p id="u7869-2"><span class="sporting" id="u7869">WORKS</span></p></a>
-     <a class="nonblock nontext clearfix grpelem" id="u32254-4" href="phone/reel.html?devicelock=phone" data-href="page:U11243"><!-- content --><p id="u32254-2"><span class="sporting" id="u32254">REELS</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u32254-4" href="reel.html" data-href="page:U2771"><!-- content --><p id="u32254-2"><span class="sporting" id="u32254">REELS</span></p></a>
      <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="sporting" id="u7871">LABS</span></p></a>
     </div>
     <div class="clearfix colelem" id="pu11432-6"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U11432-BP_infinity" template="labs.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
      <div class="clearfix grpelem" id="u11432-6" data-muse-uid="U11432" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
-      <p>LABS is the collections of my</p>
-      <p>experiments and prototype of small projects or technical skills practice.</p>
+      <p id="u11432-2"><span class="credits-termina-13" id="u11432">LABS is the collections of my</span></p>
+      <p id="u11432-4"><span class="credits-termina-13" id="u11432-3">experiments and prototype of small projects or technical skills practice.</span></p>
      </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U7936" template="labs.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
      <div class="pointer_cursor museBGSize clearfix grpelem" id="u7936" data-muse-uid="U7936"><!-- group -->
       <a class="block" href="musketeers.html" data-href="page:U1578"><!-- Block link tag --></a>
       <!-- m_editable region-id="editable-static-tag-U8730-BP_infinity" template="labs.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-      <a class="nonblock nontext rgba-background clearfix grpelem" id="u8730-8" href="celanimation.html" data-href="page:U8162" data-muse-uid="U8730" data-muse-type="txt_frame"><!-- content --><p id="u8730">&nbsp;</p><p id="u8730-2">&nbsp;</p><p id="u8730-4">Frame by Frame</p><p id="u8730-6">GIF animations</p></a>
+      <a class="nonblock nontext rgba-background clearfix grpelem" id="u8730-8" href="celanimation.html" data-href="page:U8162" data-muse-uid="U8730" data-muse-type="txt_frame"><!-- content --><p id="u8730">&nbsp;</p><p id="u8730-2">&nbsp;</p><p id="u8730-4"><span class="headline-termina-21" id="u8730-3">Frame by Frame</span></p><p id="u8730-6"><span class="body-termina-11" id="u8730-5">GIF animations</span></p></a>
       <!-- /m_editable -->
      </div>
      <!-- /m_editable -->
@@ -68,17 +63,22 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="pointer_cursor museBGSize clearfix grpelem" id="u10867" data-muse-uid="U10867"><!-- group -->
       <a class="block" href="unitylab.html" data-href="page:U10852"><!-- Block link tag --></a>
       <!-- m_editable region-id="editable-static-tag-U10868-BP_infinity" template="labs.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-      <a class="nonblock nontext rgba-background clearfix grpelem" id="u10868-8" href="unitylab.html" data-href="page:U10852" data-muse-uid="U10868" data-muse-type="txt_frame"><!-- content --><p id="u10868">&nbsp;</p><p id="u10868-2">&nbsp;</p><p id="u10868-4">Playing with Unity</p><p id="u10868-6">3D, C#</p></a>
+      <a class="nonblock nontext rgba-background clearfix grpelem" id="u10868-8" href="unitylab.html" data-href="page:U10852" data-muse-uid="U10868" data-muse-type="txt_frame"><!-- content --><p id="u10868">&nbsp;</p><p id="u10868-2">&nbsp;</p><p id="u10868-4"><span class="headline-termina-21" id="u10868-3">Playing with Unity</span></p><p id="u10868-6"><span class="body-termina-11" id="u10868-5">3D, C#</span></p></a>
       <!-- /m_editable -->
      </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U11500-BP_infinity" template="labs.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background clearfix grpelem" id="u11500-8" href="illustration.html" data-href="page:U11468" data-muse-uid="U11500" data-muse-type="txt_frame"><!-- content --><p id="u11500">&nbsp;</p><p id="u11500-2">&nbsp;</p><p id="u11500-4">Draw Dream</p><p id="u11500-6">Illustrations</p></a>
+     <a class="nonblock nontext rgba-background clearfix grpelem" id="u11500-8" href="illustration.html" data-href="page:U11468" data-muse-uid="U11500" data-muse-type="txt_frame"><!-- content --><p id="u11500">&nbsp;</p><p id="u11500-2">&nbsp;</p><p id="u11500-4"><span class="headline-termina-21" id="u11500-3">Draw Dream</span></p><p id="u11500-6"><span class="body-termina-11" id="u11500-5">Illustrations</span></p></a>
      <!-- /m_editable -->
     </div>
-    <!-- m_editable region-id="editable-static-tag-U33385-BP_infinity" template="labs.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext clip_frame clearfix colelem" id="u33385" href="repitation-in-glsl.html" data-href="page:U14563" data-muse-uid="U33385" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u33385_img" src="images/glslpattern2.gif?crc=407889597" alt="" width="239" height="240" data-muse-src="images/glslpattern2.gif?crc=407889597"/></a>
-    <!-- /m_editable -->
+    <div class="clearfix colelem" id="pu33385"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U33385-BP_infinity" template="labs.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clip_frame clearfix grpelem" id="u33385" href="repitation-in-glsl.html" data-href="page:U14563" data-muse-uid="U33385" data-muse-type="img_frame"><!-- image --><img class="position_content" id="u33385_img" src="images/glslpattern2.gif?crc=407889597" alt="" width="239" height="240" data-muse-src="images/glslpattern2.gif?crc=407889597"/></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U33666-BP_infinity" template="labs.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext rgba-background clearfix grpelem" id="u33666-8" href="illustration.html" data-href="page:U11468" data-muse-uid="U33666" data-muse-type="txt_frame"><!-- content --><p id="u33666">&nbsp;</p><p id="u33666-2">&nbsp;</p><p id="u33666-4"><span class="headline-termina-21" id="u33666-3">Repetition</span></p><p id="u33666-6"><span class="body-termina-11" id="u33666-5">GLSL Shader</span></p></a>
+     <!-- /m_editable -->
+    </div>
     <div class="clearfix colelem" id="pu26633-4"><!-- group -->
      <a class="nonblock nontext clearfix grpelem" id="u26633-4" href="mailto:nitcha.fame@gmail.com"><!-- content --><p id="u26633-2"><span class="sporting" id="u26633">nitcha.fame[at]gmail.com</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u26651-4" href="https://vimeo.com/nitchafame"><!-- content --><p id="u26651-2"><span class="sporting" id="u26651">VIMEO</span></p></a>
@@ -94,7 +94,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="pointer_cursor museBGSize clearfix colelem" id="u9463" data-muse-uid="U9463"><!-- group -->
      <a class="block" href="bootcampcode.html" data-href="page:U9443"><!-- Block link tag --></a>
      <!-- m_editable region-id="editable-static-tag-U9464-BP_infinity" template="labs.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background clearfix grpelem" id="u9464-8" href="bootcampcode.html" data-href="page:U9443" data-muse-uid="U9464" data-muse-type="txt_frame"><!-- content --><p id="u9464">&nbsp;</p><p id="u9464-2">&nbsp;</p><p id="u9464-4">Forms with Processing</p><p id="u9464-6">Interactive</p></a>
+     <a class="nonblock nontext rgba-background clearfix grpelem" id="u9464-8" href="bootcampcode.html" data-href="page:U9443" data-muse-uid="U9464" data-muse-type="txt_frame"><!-- content --><p id="u9464">&nbsp;</p><p id="u9464-2">&nbsp;</p><p id="u9464-4"><span class="headline-termina-21" id="u9464-3">Forms with Processing</span></p><p id="u9464-6"><span class="body-termina-11" id="u9464-5">Interactive</span></p></a>
      <!-- /m_editable -->
     </div>
     <!-- /m_editable -->
@@ -105,7 +105,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U24783-BP_infinity" template="labs.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background clearfix grpelem" id="u24783-8" href="3d.html" data-href="page:U11067" data-muse-uid="U24783" data-muse-type="txt_frame"><!-- content --><p id="u24783">&nbsp;</p><p id="u24783-2">&nbsp;</p><p id="u24783-4">Painting in 3D space</p><p id="u24783-6">3D</p></a>
+     <a class="nonblock nontext rgba-background clearfix grpelem" id="u24783-8" href="3d.html" data-href="page:U11067" data-muse-uid="U24783" data-muse-type="txt_frame"><!-- content --><p id="u24783">&nbsp;</p><p id="u24783-2">&nbsp;</p><p id="u24783-4"><span class="headline-termina-21" id="u24783-3">Painting in 3D space</span></p><p id="u24783-6"><span class="body-termina-11" id="u24783-5">3D</span></p></a>
      <!-- /m_editable -->
     </div>
     <a class="nonblock nontext clearfix colelem" id="u26645-4" href="https://www.instagram.com/nitchafame/"><!-- content --><p id="u26645-2"><span class="sporting" id="u26645">IG</span></p></a>
