--- a/lucid.html
+++ b/lucid.html
@@ -13,14 +13,14 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "lucid.css"], "outOfDate":[]};
 </script>
   
-  <link rel="shortcut icon" href="images/favicon.ico?crc=3993744308"/>
+  <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>Lucid</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=298971941"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=32922217"/>
   <link rel="stylesheet" type="text/css" href="css/lucid.css?crc=403295744" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/1gUfT-bAv8iPZMbOSUCpfA_tkX2K4VZEAosvLfIXxkqfeGqgf5WHK6GPHQJUwQbX5QwDWDwaZ2qXZQZRZAI3wRjowhJtw2bUwAsyZA4yjDb3jRbkeKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6M9GIQWmDZZMgvEWoKbj.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/uQuSbBi2rQBXShacTMljOv6_tFREdnRhW0KN6vjsVXtfeGqgf5WHK6GPHQJUwQbX5QwDWDwaZ2qXZQZRZAI3wRjowhJtw2bUwAsyZA4yjDb3jRbkeKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6M9GIQWmDZZMgNwVoKbj.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -38,7 +38,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <a class="nonblock nontext clearfix grpelem" id="u154-4" href="about.html" data-href="page:U2777"><!-- content --><p id="u154-2"><span class="sporting" id="u154">ABOUT</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="index.html" data-href="page:U68"><!-- content --><p id="u7869-2"><span class="sporting" id="u7869">WORKS</span></p></a>
-     <a class="nonblock nontext clearfix grpelem" id="u32254-4" href="phone/reel.html?devicelock=phone" data-href="page:U11243"><!-- content --><p id="u32254-2"><span class="sporting" id="u32254">REELS</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u32254-4" href="reel.html" data-href="page:U2771"><!-- content --><p id="u32254-2"><span class="sporting" id="u32254">REELS</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="sporting" id="u7871">LABS</span></p></a>
     </div>
     <div class="clearfix colelem" id="pu7978-7"><!-- group -->
@@ -296,7 +296,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="SSSlideLinks clearfix" data-col-pos="1" id="u9085"><!-- horizontal-rows box -->
        <!-- m_editable region-id="editable-static-tag-U9372-BP_infinity" template="lucid.html" data-type="image" data-ice-options="clickable" -->
        <div class="SSSlideLink clip_frame grpelem" data-col-pos="0" id="u9372" data-muse-uid="U9372" data-muse-type="img_frame"><!-- image -->
-        <img class="block" data-col-pos="0" id="u9372_img" src="images/srb2-crop-u9372.jpg?crc=4277651641" alt="" width="82" height="70" data-muse-src="images/srb2-crop-u9372.jpg?crc=4277651641"/>
+        <img class="block" data-col-pos="0" id="u9372_img" src="images/srb2-crop-u9372.jpg?crc=347835917" alt="" width="82" height="70" data-muse-src="images/srb2-crop-u9372.jpg?crc=347835917"/>
        </div>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U9363-BP_infinity" template="lucid.html" data-type="image" data-ice-options="clickable" -->
@@ -306,12 +306,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U9381-BP_infinity" template="lucid.html" data-type="image" data-ice-options="clickable" -->
        <div class="SSSlideLink clip_frame grpelem" data-col-pos="2" id="u9381" data-muse-uid="U9381" data-muse-type="img_frame"><!-- image -->
-        <img class="block" data-col-pos="2" id="u9381_img" src="images/srb3-crop-u9381.jpg?crc=4019424908" alt="" width="82" height="70" data-muse-src="images/srb3-crop-u9381.jpg?crc=4019424908"/>
+        <img class="block" data-col-pos="2" id="u9381_img" src="images/srb3-crop-u9381.jpg?crc=4003144197" alt="" width="82" height="70" data-muse-src="images/srb3-crop-u9381.jpg?crc=4003144197"/>
        </div>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U9090-BP_infinity" template="lucid.html" data-type="image" data-ice-options="clickable" -->
        <div class="SSSlideLink clip_frame grpelem" data-col-pos="3" id="u9090" data-muse-uid="U9090" data-muse-type="img_frame"><!-- image -->
-        <img class="block" data-col-pos="3" id="u9090_img" src="images/lucidprocess1-crop-u9090.jpg?crc=297640535" alt="" width="82" height="70" data-muse-src="images/lucidprocess1-crop-u9090.jpg?crc=297640535"/>
+        <img class="block" data-col-pos="3" id="u9090_img" src="images/lucidprocess1-crop-u9090.jpg?crc=3926386993" alt="" width="82" height="70" data-muse-src="images/lucidprocess1-crop-u9090.jpg?crc=3926386993"/>
        </div>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U9140-BP_infinity" template="lucid.html" data-type="image" data-ice-options="clickable" -->
