--- a/wikimedia-grants.html
+++ b/wikimedia-grants.html
@@ -13,14 +13,14 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "webpro.js", "musewpslideshow.js", "jquery.museoverlay.js", "touchswipe.js", "wikimedia-grants.css"], "outOfDate":[]};
 </script>
   
-  <link rel="shortcut icon" href="images/favicon.ico?crc=3993744308"/>
+  <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>Wikimedia-Grants </title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=298971941"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=32922217"/>
   <link rel="stylesheet" type="text/css" href="css/wikimedia-grants.css?crc=4194911524" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/vYRS1H4nv8RUZAoSrWF2zh_CEZ4_rq2EA5yJrYs-2oqfeGqgf5WHK6GPHQJUwQbX5QwDWDwaZ2qXZQZRZAI3wRjowhJtw2bUwAsyZA4yjDb3jRbkeKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6M9GIQWmDZZMg1-doKbj.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/8HhJ_T23iFxpM8mnfV2JhHhanxXXZ9KTKzeu83GCkYIfeGqgf5WHK6GPHQJUwQbX5QwDWDwaZ2qXZQZRZAI3wRjowhJtw2bUwAsyZA4yjDb3jRbkeKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6M9GIQWmDZZMgcCQoKbj.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -38,7 +38,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <a class="nonblock nontext clearfix grpelem" id="u154-4" href="about.html" data-href="page:U2777"><!-- content --><p id="u154-2"><span class="sporting" id="u154">ABOUT</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="index.html" data-href="page:U68"><!-- content --><p id="u7869-2"><span class="sporting" id="u7869">WORKS</span></p></a>
-     <a class="nonblock nontext clearfix grpelem" id="u32254-4" href="phone/reel.html?devicelock=phone" data-href="page:U11243"><!-- content --><p id="u32254-2"><span class="sporting" id="u32254">REELS</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u32254-4" href="reel.html" data-href="page:U2771"><!-- content --><p id="u32254-2"><span class="sporting" id="u32254">REELS</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="sporting" id="u7871">LABS</span></p></a>
     </div>
     <div class="clearfix colelem" id="pu32898-7"><!-- group -->
@@ -172,7 +172,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         <!-- /m_editable -->
         <!-- m_editable region-id="editable-static-tag-U32825-BP_infinity" template="wikimedia-grants.html" data-type="image" data-ice-options="clickable" -->
         <div class="SSSlideLink clip_frame grpelem" data-col-pos="7" id="u32825" data-muse-uid="U32825" data-muse-type="img_frame"><!-- image -->
-         <img class="block" data-col-pos="7" id="u32825_img" src="images/untitled-crop-u32825.jpg?crc=92248305" alt="" width="93" height="87" data-muse-src="images/untitled-crop-u32825.jpg?crc=92248305"/>
+         <img class="block" data-col-pos="7" id="u32825_img" src="images/untitled-crop-u32825.jpg?crc=408559619" alt="" width="93" height="87" data-muse-src="images/untitled-crop-u32825.jpg?crc=408559619"/>
         </div>
         <!-- /m_editable -->
         <!-- m_editable region-id="editable-static-tag-U32819-BP_infinity" template="wikimedia-grants.html" data-type="image" data-ice-options="clickable" -->
