--- a/echo.html
+++ b/echo.html
@@ -13,14 +13,14 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "echo.css"], "outOfDate":[]};
 </script>
   
-  <link rel="shortcut icon" href="images/favicon.ico?crc=3993744308"/>
+  <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>Echo</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=298971941"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=32922217"/>
   <link rel="stylesheet" type="text/css" href="css/echo.css?crc=173535595" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/96LAO7IvvZEwCH4oI9hyMonYB4_94KqlR7on_fw8EPJfeGqgf5WHK6GPHQJUwQbX5QwDWDwaZ2qXZQZRZAI3wRjowhJtw2bUwAsyZA4yjDb3jRbkeKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6M9GIQWmDZZMg17doKbj.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/Bo3QeLw_4pbfzCsKgM_oVPgYjiX9s43gOyFTRCk5hHtfeGqgf5WHK6GPHQJUwQbX5QwDWDwaZ2qXZQZRZAI3wRjowhJtw2bUwAsyZA4yjDb3jRbkeKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6M9GIQWmDZZMgcvQoKbj.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -38,7 +38,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <a class="nonblock nontext clearfix grpelem" id="u154-4" href="about.html" data-href="page:U2777"><!-- content --><p id="u154-2"><span class="sporting" id="u154">ABOUT</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="index.html" data-href="page:U68"><!-- content --><p id="u7869-2"><span class="sporting" id="u7869">WORKS</span></p></a>
-     <a class="nonblock nontext clearfix grpelem" id="u32254-4" href="phone/reel.html?devicelock=phone" data-href="page:U11243"><!-- content --><p id="u32254-2"><span class="sporting" id="u32254">REELS</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u32254-4" href="reel.html" data-href="page:U2771"><!-- content --><p id="u32254-2"><span class="sporting" id="u32254">REELS</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="sporting" id="u7871">LABS</span></p></a>
     </div>
     <div class="clearfix colelem" id="pu33331"><!-- group -->
