--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "jquery.musepolyfill.bgsize.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.musepolyfill.bgsize.js", "require.js", "index.css"], "outOfDate":[]};
 </script>
   
-  <link rel="shortcut icon" href="images/favicon.ico?crc=3993744308"/>
+  <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=298971941"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=32922217"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=268552357" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3948023701" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/quicksand:n4,i4:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/qcLYMou9SYYDR6XqLlgZ9N3c073eGrgQxj6E7dIGKFIfeGqgf5WHK6GPHQJUwQbX5QwDWDwaZ2qXZQZRZAI3wRjowhJtw2bUwAsyZA4yjDb3jRbkeKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6M9GIQWmDZZMghEWoKbj.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/llJuBI-Lm29A7Yck0C8G4Jjsd9_z7--WBdQMlQiPZn3feGqgf5WHK6GPHQJUwQbX5QwDWDwaZ2qXZQZRZAI3wRjowhJtw2bUwAsyZA4yjDb3jRbkeKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6M9GIQWmDZZMgtCVoKbj.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -49,7 +49,7 @@ transition:300ms;
     </div>
     <a class="nonblock nontext clearfix grpelem" id="u154-4" href="about.html" data-href="page:U2777"><!-- content --><p id="u154-2"><span class="sporting" id="u154">ABOUT</span></p></a>
     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u7869-4" href="index.html" data-href="page:U68"><!-- content --><p id="u7869-2"><span class="sporting" id="u7869">WORKS</span></p></a>
-    <a class="nonblock nontext clearfix grpelem" id="u32254-4" href="phone/reel.html?devicelock=phone" data-href="page:U11243"><!-- content --><p id="u32254-2"><span class="sporting" id="u32254">REELS</span></p></a>
+    <a class="nonblock nontext clearfix grpelem" id="u32254-4" href="reel.html" data-href="page:U2771"><!-- content --><p id="u32254-2"><span class="sporting" id="u32254">REELS</span></p></a>
     <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="sporting" id="u7871">LABS</span></p></a>
    </div>
    <!-- m_editable region-id="editable-static-tag-U30026-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
@@ -179,26 +179,27 @@ transition:300ms;
        <img class="block" id="u33445_img" src="images/ahtt_e3e1dd.gif?crc=3808227599" alt="" width="320" height="320" data-muse-src="images/ahtt_e3e1dd.gif?crc=3808227599"/>
       </div>
       <!-- /m_editable -->
-      <!-- m_editable region-id="editable-static-tag-U33495-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-      <a class="nonblock nontext rgba-background clearfix grpelem" id="u33495-16" href="anyways.html" data-href="page:U27669" data-muse-uid="U33495" data-muse-type="txt_frame"><!-- content --><p id="u33495-2"><span class="credits-termina-13" id="u33495">ANYWAYS, HERE'S</span></p><p id="u33495-4"><span class="credits-termina-13" id="u33495-3">THE THING</span></p><p id="u33495-5">&nbsp;</p><p id="u33495-7"><span class="credits-termina-13" id="u33495-6">Art direction,</span></p><p id="u33495-9"><span class="credits-termina-13" id="u33495-8">Identity Design,</span></p><p id="u33495-11"><span class="credits-termina-13" id="u33495-10">Graphic Design,</span></p><p id="u33495-13"><span class="credits-termina-13" id="u33495-12">Motion Design</span></p><p id="u33495-14">&nbsp;</p></a>
-      <!-- /m_editable -->
-     </div>
-     <div class="clearfix colelem" id="pu33466"><!-- group -->
       <!-- m_editable region-id="editable-static-tag-U33466-BP_infinity" template="index.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
       <a class="nonblock nontext clip_frame grpelem" id="u33466" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U33466" data-muse-type="img_frame"><!-- image --><img class="block" id="u33466_img" src="images/wonderfruit2018_sirintip_tour-200-crop-u33466.jpg?crc=360113153" alt="" width="320" height="192" data-muse-src="images/wonderfruit2018_sirintip_tour-200-crop-u33466.jpg?crc=360113153"/></a>
       <!-- /m_editable -->
-      <!-- m_editable region-id="editable-static-tag-U33483-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-      <a class="nonblock nontext rgba-background clearfix grpelem" id="u33483-7" href="shoulder.html" data-href="page:U30404" data-muse-uid="U33483" data-muse-type="txt_frame"><!-- content --><p id="u33483-2"><span class="credits-termina-13" id="u33483">WONDER COLLAR</span></p><p id="u33483-3">&nbsp;</p><p id="u33483-5"><span class="body-termina-11" id="u33483-4">Art Direction, Design, Fabrication</span></p></a>
-      <!-- /m_editable -->
-     </div>
-     <!-- m_editable region-id="editable-static-tag-U33472" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-     <div class="pointer_cursor museBGSize clearfix colelem" id="u33472" data-muse-uid="U33472"><!-- group -->
-      <a class="block" href="betweenspaces.html" data-href="page:U19544"><!-- Block link tag --></a>
       <!-- m_editable region-id="editable-static-tag-U33473-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
       <a class="nonblock nontext rgba-background clearfix grpelem" id="u33473-9" href="musketeers.html" data-href="page:U1578" data-muse-uid="U33473" data-muse-type="txt_frame"><!-- content --><p id="u33473-2">Uprising : Musketeers</p><p id="u33473-3">&nbsp;</p><p id="u33473-5">Graphic design, Art direction</p><p id="u33473-6">&nbsp;</p><p id="u33473-7">&nbsp;</p></a>
       <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U33495-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext rgba-background clearfix grpelem" id="u33495-16" href="anyways.html" data-href="page:U27669" data-muse-uid="U33495" data-muse-type="txt_frame"><!-- content --><p id="u33495-2"><span class="credits-termina-13" id="u33495">ANYWAYS, HERE'S</span></p><p id="u33495-4"><span class="credits-termina-13" id="u33495-3">THE THING</span></p><p id="u33495-5">&nbsp;</p><p id="u33495-7"><span class="credits-termina-13" id="u33495-6">Art direction,</span></p><p id="u33495-9"><span class="credits-termina-13" id="u33495-8">Identity Design,</span></p><p id="u33495-11"><span class="credits-termina-13" id="u33495-10">Graphic Design,</span></p><p id="u33495-13"><span class="credits-termina-13" id="u33495-12">Motion Design</span></p><p id="u33495-14">&nbsp;</p></a>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U33671-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext rgba-background clearfix grpelem" id="u33671-6" href="lonelylego.html" data-href="page:U2196" data-muse-uid="U33671" data-muse-type="txt_frame"><!-- content --><p id="u33671-2"><span class="credits-termina-13" id="u33671">WONDER COLLAR</span></p><p id="u33671-4"><span class="credits-termina-13" id="u33671-3">Art direction, Design, Fabrication</span></p></a>
+      <!-- /m_editable -->
      </div>
-     <!-- /m_editable -->
+     <div class="clearfix colelem" id="pu33472"><!-- group -->
+      <!-- m_editable region-id="editable-static-tag-U33472" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext museBGSize grpelem" id="u33472" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U33472"><!-- simple frame --></a>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U33674-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext rgba-background clearfix grpelem" id="u33674-7" href="lonelylego.html" data-href="page:U2196" data-muse-uid="U33674" data-muse-type="txt_frame"><!-- content --><p><span class="credits-termina-13" id="u33674">MUSKETEERS: UPRISING</span></p><p>&nbsp;</p><p id="u33674-5"><span class="credits-termina-13" id="u33674-4">Art direction, Design, Album cover</span></p></a>
+      <!-- /m_editable -->
+     </div>
     </div>
     <div class="clearfix grpelem" id="ppu33482"><!-- column -->
      <div class="clearfix colelem" id="pu33482"><!-- group -->
@@ -233,39 +234,35 @@ transition:300ms;
      </div>
     </div>
    </div>
-   <div class="clearfix colelem" id="pu33474"><!-- group -->
-    <!-- m_editable region-id="editable-static-tag-U33474-BP_infinity" template="index.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext clip_frame grpelem" id="u33474" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U33474" data-muse-type="img_frame"><!-- image --><img class="block" id="u33474_img" src="images/selfportrait_2013.png?crc=143841312" alt="" width="218" height="219" data-muse-src="images/selfportrait_2013.png?crc=143841312"/></a>
-    <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U33476-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext rgba-background clearfix grpelem" id="u33476-4" href="about.html" data-href="page:U2777" data-muse-uid="U33476" data-muse-type="txt_frame"><!-- content --><p>About</p></a>
-    <!-- /m_editable -->
-    <!-- m_editable region-id="editable-static-tag-U33479" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-    <div class="pointer_cursor museBGSize clearfix grpelem" id="u33479" data-muse-uid="U33479"><!-- group -->
-     <a class="block" href="betweenspaces.html" data-href="page:U19544"><!-- Block link tag --></a>
-     <!-- m_editable region-id="editable-static-tag-U33481-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext rgba-background clearfix grpelem" id="u33481-10" href="teefox.html" data-href="page:U3938" data-muse-uid="U33481" data-muse-type="txt_frame"><!-- content --><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>Tee Fox</p><p>&nbsp;</p><p id="u33481-8"><span id="u33481-7">Illustration</span></p></a>
-     <!-- /m_editable -->
-    </div>
-    <!-- /m_editable -->
-    <div class="clearfix grpelem" id="pu33470"><!-- column -->
+   <div class="clearfix colelem" id="ppu33470"><!-- group -->
+    <div class="clearfix grpelem" id="pu33470"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U33470" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-     <div class="pointer_cursor museBGSize clearfix colelem" id="u33470" data-muse-uid="U33470"><!-- group -->
-      <a class="block" href="betweenspaces.html" data-href="page:U19544"><!-- Block link tag --></a>
-      <!-- m_editable region-id="editable-static-tag-U33471-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-      <a class="nonblock nontext rgba-background clearfix grpelem" id="u33471-8" href="sudked.html" data-href="page:U4140" data-muse-uid="U33471" data-muse-type="txt_frame"><!-- content --><p id="u33471-2">Sudkedtedsakran</p><p id="u33471-3">&nbsp;</p><p id="u33471-5"><span class="body-termina-11" id="u33471-4">Graphic design, Logo</span></p><p id="u33471-6">&nbsp;</p></a>
-      <!-- /m_editable -->
-     </div>
+     <a class="nonblock nontext museBGSize grpelem" id="u33470" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U33470"><!-- simple frame --></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U33474-BP_infinity" template="index.html" data-type="image" data-ice-options="clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext clip_frame grpelem" id="u33474" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U33474" data-muse-type="img_frame"><!-- image --><img class="block" id="u33474_img" src="images/selfportrait_2013.png?crc=143841312" alt="" width="218" height="219" data-muse-src="images/selfportrait_2013.png?crc=143841312"/></a>
+     <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U33476-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext rgba-background clearfix grpelem" id="u33476-4" href="about.html" data-href="page:U2777" data-muse-uid="U33476" data-muse-type="txt_frame"><!-- content --><p>About</p></a>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U33478" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-     <div class="pointer_cursor museBGSize clearfix colelem" id="u33478" data-muse-uid="U33478"><!-- group -->
+     <div class="pointer_cursor museBGSize clearfix grpelem" id="u33478" data-muse-uid="U33478"><!-- group -->
       <a class="block" href="betweenspaces.html" data-href="page:U19544"><!-- Block link tag --></a>
-      <!-- m_editable region-id="editable-static-tag-U33480-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-      <a class="nonblock nontext rgba-background clearfix grpelem" id="u33480-7" href="25hours.html" data-href="page:U1060" data-muse-uid="U33480" data-muse-type="txt_frame"><!-- content --><p id="u33480-2">25Hours : Colour in White</p><p id="u33480-3">&nbsp;</p><p id="u33480-5">Graphic Design</p></a>
+      <!-- m_editable region-id="editable-static-tag-U33683-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext rgba-background clearfix grpelem" id="u33683-6" href="lonelylego.html" data-href="page:U2196" data-muse-uid="U33683" data-muse-type="txt_frame"><!-- content --><p id="u33683-2"><span class="credits-termina-13" id="u33683">COLOUR IN WHITE: 25HOURS</span></p><p id="u33683-4"><span class="credits-termina-13" id="u33683-3">Graphic Design, Album Cover</span></p></a>
       <!-- /m_editable -->
      </div>
      <!-- /m_editable -->
+     <!-- m_editable region-id="editable-static-tag-U33680-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext rgba-background clearfix grpelem" id="u33680-7" href="lonelylego.html" data-href="page:U2196" data-muse-uid="U33680" data-muse-type="txt_frame"><!-- content --><p id="u33680-2"><span class="credits-termina-13" id="u33680">SUDKED-TEDSAKARN</span></p><p id="u33680-3">&nbsp;</p><p id="u33680-5"><span class="credits-termina-13" id="u33680-4">Identity Design, Motion Design</span></p></a>
+     <!-- /m_editable -->
     </div>
+    <!-- m_editable region-id="editable-static-tag-U33479" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext museBGSize grpelem" id="u33479" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U33479"><!-- simple frame --></a>
+    <!-- /m_editable -->
+    <!-- m_editable region-id="editable-static-tag-U33677-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+    <a class="nonblock nontext rgba-background clearfix grpelem" id="u33677-8" href="lonelylego.html" data-href="page:U2196" data-muse-uid="U33677" data-muse-type="txt_frame"><!-- content --><p id="u33677-6"><span class="credits-termina-13" id="u33677-4">TEE FOX<br/><br/></span><span class="credits-termina-13" id="u33677-5">Illustration</span></p></a>
+    <!-- /m_editable -->
    </div>
    <div class="clearfix colelem" id="pu26633-4"><!-- group -->
     <a class="nonblock nontext clearfix grpelem" id="u26633-4" href="mailto:nitcha.fame@gmail.com"><!-- content --><p id="u26633-2"><span class="sporting" id="u26633">nitcha.fame[at]gmail.com</span></p></a>
