--- a/jazzjam.html
+++ b/jazzjam.html
@@ -13,7 +13,7 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "jazzjam.css"], "outOfDate":[]};
 </script>
   
-  <link rel="shortcut icon" href="images/favicon.ico?crc=3993744308"/>
+  <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>jazzjam</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=298971941"/>
@@ -25,7 +25,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/quicksand:n4:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/jpQPKTJHDtNrqDSDqwBn27wmyO9Pk-Eknes-ygcAcU3feGqgf5WHK6GPHQJUwQbX5QwDWDwaZ2qXZQZRZAI3wRjowhJtw2bUwAsyZA4yjDb3jRbkeKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6M9GIQWmDZZMg8HdoKbj.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/bOmBVUSGymW2M_f3-F2kS_79LZN-oCi_LA3dW-D38LtfeGqgf5WHK6GPHQJUwQbX5QwDWDwaZ2qXZQZRZAI3wRjowhJtw2bUwAsyZA4yjDb3jRbkeKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6M9GIQWmDZZMgqCQoKbj.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -43,7 +43,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <a class="nonblock nontext clearfix grpelem" id="u154-4" href="about.html" data-href="page:U2777"><!-- content --><p id="u154-2"><span class="sporting" id="u154">ABOUT</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="index.html" data-href="page:U68"><!-- content --><p id="u7869-2"><span class="sporting" id="u7869">WORKS</span></p></a>
-     <a class="nonblock nontext clearfix grpelem" id="u32254-4" href="phone/reel.html?devicelock=phone" data-href="page:U11243"><!-- content --><p id="u32254-2"><span class="sporting" id="u32254">REELS</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u32254-4" href="reel.html" data-href="page:U2771"><!-- content --><p id="u32254-2"><span class="sporting" id="u32254">REELS</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="sporting" id="u7871">LABS</span></p></a>
     </div>
     <div class="clearfix colelem" id="pu29911"><!-- group -->
