--- a/reel.html
+++ b/reel.html
@@ -13,14 +13,14 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "reel.css"], "outOfDate":[]};
 </script>
   
-  <link rel="shortcut icon" href="images/favicon.ico?crc=3993744308"/>
+  <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>Reel</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=298971941"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=32922217"/>
   <link rel="stylesheet" type="text/css" href="css/reel.css?crc=408789130" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/BjHX5ejCac_yZsB87g6N70XdLFctytmp2bplP50nnqJfe1XJoS7HfyJTwRIUF2bowDFLwDiq5Qs8FcF8jQMkFRqDjR63F2IUZeB8jcBRF2gKF2J-HPG0dc8XjhyyZcI0dA9Cdc8XjhyyZcI0dA9CiaiaOcoTieFGjAZyOcu8J6iXZW4l-AoyH6GJl0JgIMMjgPMgP6sFiWF8qMYcTLc4g6.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/SLFEbh89Ul7Tq0nHTzkdcbBgrVf1E1igX_AM2UNbDqXfe1XJoS7HfyJTwRIUF2bowDFLwDiq5Qs8FcF8jQMkFRqDjR63F2IUZeB8jcBRF2gKF2J-HPG0dc8XjhyyZcI0dA9Cdc8XjhyyZcI0dA9CiaiaOcoTieFGjAZyOcu8J6iXZW4l-AoyH6GJl0JgIMMjgPMgP6sFiWF8qMY73xc4g6.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -35,7 +35,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     <div class="clearfix colelem" id="pu154-4"><!-- group -->
      <a class="nonblock nontext clearfix grpelem" id="u154-4" href="about.html" data-href="page:U2777"><!-- content --><p id="u154-2"><span class="sporting" id="u154">ABOUT</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="index.html" data-href="page:U68"><!-- content --><p id="u7869-2"><span class="sporting" id="u7869">WORKS</span></p></a>
-     <a class="nonblock nontext clearfix grpelem" id="u32254-4" href="phone/reel.html?devicelock=phone" data-href="page:U11243"><!-- content --><p id="u32254-2"><span class="sporting" id="u32254">REELS</span></p></a>
+     <a class="nonblock nontext MuseLinkActive clearfix grpelem" id="u32254-4" href="reel.html" data-href="page:U2771"><!-- content --><p id="u32254-2"><span class="sporting" id="u32254">REELS</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="sporting" id="u7871">LABS</span></p></a>
      <div class="clip_frame grpelem" id="u30898"><!-- image -->
       <img class="block" id="u30898_img" src="images/nitchatothong_alpha.gif?crc=325294552" alt="" width="193" height="193"/>
