--- a/selfie.html
+++ b/selfie.html
@@ -13,7 +13,7 @@ document.documentElement.className = document.documentElement.className.replace(
 if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "require.js", "selfie.css"], "outOfDate":[]};
 </script>
   
-  <link rel="shortcut icon" href="images/favicon.ico?crc=3993744308"/>
+  <link rel="shortcut icon" href="images/favicon.ico?crc=236454869"/>
   <title>selfie</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=298971941"/>
@@ -25,7 +25,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
 </script>
   <!-- JS includes -->
   <script src="https://webfonts.creativecloud.com/quicksand:n4,i4,n3:all.js" type="text/javascript"></script>
-  <script src="https://use.typekit.net/ik/-hOXbgA89IYu2NB0dm8YyWJC8vzN_mAdlBmzN8KJfejfe1XJoS7HfyJTwRIUF2bowDFLwDiq5Qs8FcF8jQMkFRqDjR63F2IUZeB8jcBRF2gKF2J-HPG0dc8XjhyyZcI0dA9Cdc8XjhyyZcI0dA9CiaiaOcoTieFGjAZyOcu8J6iXZW4l-AoyH6GJl0JgIMMjgPMgP6sFiWF8qMYETLc4g6.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/Tw6XtRimaNQ73eQh7McFwc-Nt5h2QrXHzQjybErOb89fe1XJoS7HfyJTwRIUF2bowDFLwDiq5Qs8FcF8jQMkFRqDjR63F2IUZeB8jcBRF2gKF2J-HPG0dc8XjhyyZcI0dA9Cdc8XjhyyZcI0dA9CiaiaOcoTieFGjAZyOcu8J6iXZW4l-AoyH6GJl0JgIMMjgPMgP6sFiWF8qMY_3xc4g6.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -43,7 +43,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <a class="nonblock nontext clearfix grpelem" id="u154-4" href="about.html" data-href="page:U2777"><!-- content --><p id="u154-2"><span class="sporting" id="u154">ABOUT</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="index.html" data-href="page:U68"><!-- content --><p id="u7869-2"><span class="sporting" id="u7869">WORKS</span></p></a>
-     <a class="nonblock nontext clearfix grpelem" id="u32254-4" href="phone/reel.html?devicelock=phone" data-href="page:U11243"><!-- content --><p id="u32254-2"><span class="sporting" id="u32254">REELS</span></p></a>
+     <a class="nonblock nontext clearfix grpelem" id="u32254-4" href="reel.html" data-href="page:U2771"><!-- content --><p id="u32254-2"><span class="sporting" id="u32254">REELS</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="sporting" id="u7871">LABS</span></p></a>
     </div>
     <div class="clearfix colelem" id="pu10617-10"><!-- group -->
