--- a/about.html
+++ b/about.html
@@ -17,10 +17,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>About</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=298971941"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=32922217"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=343287958" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=6610889"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=302321914" id="pagesheet"/>
   <!-- JS includes -->
-  <script src="https://use.typekit.net/ik/eBYxLU_NvwUSW0P2g4apqm35NlyTC54Mp7_m9H_T-8wfeT9gf5WHK6GPHQJUwQbX5QwDWDwaZ2qXZQZRZAI3wRjowhJtw2bUwAsyZA4yjDb3jRbkeKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPGHfOdKMsMMeM96MPGHfOYKMsMMeMb6MPGHfOxKMsMMeMS6M9GIQWmDZZMg_wVoKbj.js" type="text/javascript"></script>
+  <script src="https://use.typekit.net/ik/WtVpg4i_DXR0oc9UCnD7ghGqDCxAYJ5KvnvbNCfAnrCfenbgf5WHK6GPHQJUwQbX5QwDWDwaZ2qXZQZRZAI3wRjowhJtw2bUwAsyZA4yjDb3jRbkeKq7OcoTieFGjAZyOcu8OeoTieFGjAZyOcu8OYiaiko0-WsR-eBcjPolZPJYiemkdA80jPJsdcNXdkuDjAoDOAsTSagCjWq7f6Kht6IbMg6BJMI7f6KUt6IbMg6IJMI7f6Kxt6IbMg6YJMI7f6R7zbJbMs62JMBHgIuuShAbM-Rwrjqe.js" type="text/javascript"></script>
   <!-- Other scripts -->
   <script type="text/javascript">
    try {Typekit.load();} catch(e) {}
@@ -60,7 +60,72 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      </div>
      <!-- /m_editable -->
     </div>
-    <div class="clearfix colelem" id="pu24160"><!-- group -->
+    <div class="clearfix colelem" id="pu24148-147"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U24148-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
+     <div class="clearfix grpelem" id="u24148-147" data-muse-uid="U24148" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
+      <p id="u24148-2"><span class="credits-termina-13" id="u24148">–</span></p>
+      <p id="u24148-4"><span class="credits-termina-13" id="u24148-3">Exhibitions and Demos</span></p>
+      <p id="u24148-5">&nbsp;</p>
+      <p id="u24148-7"><span class="credits-termina-13" id="u24148-6">2021</span></p>
+      <p id="u24148-9"><span class="credits-termina-13" id="u24148-8">Keybod and Click-kick (Gallery I, Gallery II),</span></p>
+      <p id="u24148-11"><span class="credits-termina-13" id="u24148-10">Atta-matic (Online) at An A-historical Daydream 14th A.I.R. Biennial, A.I.R. Gallery, Brooklyn and Online Program, New York</span></p>
+      <p id="u24148-12">&nbsp;</p>
+      <p id="u24148-14"><span class="credits-termina-13" id="u24148-13">2020</span></p>
+      <p id="u24148-16"><span class="credits-termina-13" id="u24148-15">Jit( .&nbsp;&nbsp;&nbsp;&nbsp; ) at Homeward Bound, Online</span></p>
+      <p id="u24148-20"><span class="credits-termina-13" id="u24148-17">Remembering</span><span class="credits-termina-13" id="u24148-18"> </span><span class="credits-termina-13" id="u24148-19">at Poetic Computation: Seven Years of SFPC, Westbeth Gallery, New York</span></p>
+      <p id="u24148-21">&nbsp;</p>
+      <p id="u24148-23"><span class="credits-termina-13" id="u24148-22">2019</span></p>
+      <p id="u24148-25"><span class="credits-termina-13" id="u24148-24">Click-kick&nbsp; at LSC, Women in Science &amp; Art Week, New Jersey</span></p>
+      <p id="u24148-29"><span class="credits-termina-13" id="u24148-26">Remembering</span><span class="credits-termina-13" id="u24148-27"> </span><span class="credits-termina-13" id="u24148-28">at On Reverse commuting, Brooklyn</span></p>
+      <p id="u24148-30">&nbsp;</p>
+      <p id="u24148-32"><span class="credits-termina-13" id="u24148-31">2018</span></p>
+      <p id="u24148-35"><span class="credits-termina-13" id="u24148-33">Remembering</span><span class="credits-termina-13" id="u24148-34"> at SFPC, New York</span></p>
+      <p id="u24148-38"><span class="credits-termina-13" id="u24148-36">Lick it</span><span class="credits-termina-13" id="u24148-37"> at Chewing Monster, Red Brick Space, New York</span></p>
+      <p id="u24148-44"><span class="credits-termina-13" id="u24148-39">Remembering</span><span class="credits-termina-13" id="u24148-40"> at </span><a class="nonblock" href="http://ctc.tc.columbia.edu/past-1/2018/1/8/creative-technologies-exhibition"><span class="credits-termina-13" id="u24148-41">On Collaboration</span></a><span class="credits-termina-13" id="u24148-43">: Creative Technology Exhibition, Macy Art Gallery, New York</span></p>
+      <p id="u24148-45">&nbsp;</p>
+      <p id="u24148-47"><span class="credits-termina-13" id="u24148-46">2017</span></p>
+      <p id="u24148-50"><span class="credits-termina-13" id="u24148-48">Atta-matic </span><span class="credits-termina-13" id="u24148-49">at International Symposium on Wearable Computers (ISWC), Maui, Hawaii</span></p>
+      <p id="u24148-53"><span class="credits-termina-13" id="u24148-51">Atta-matic </span><span class="credits-termina-13" id="u24148-52">at LSC After Dark, Liberty of Science, New Jersey</span></p>
+      <p id="u24148-58"><span class="credits-termina-13" id="u24148-54">Keybod </span><span class="credits-termina-13" id="u24148-55">and </span><span class="credits-termina-13" id="u24148-56">Click-kick </span><span class="credits-termina-13" id="u24148-57">at Put Together, Bodyhacking Con, Austin</span></p>
+      <p id="u24148-59">&nbsp;</p>
+      <p id="u24148-61"><span class="credits-termina-13" id="u24148-60">2016</span></p>
+      <p id="u24148-64"><span class="credits-termina-13" id="u24148-62">Atta-matic </span><span class="credits-termina-13" id="u24148-63">at BIOMEDevice Conference, San Jose</span></p>
+      <p id="u24148-67"><span class="credits-termina-13" id="u24148-65">Atta-matic </span><span class="credits-termina-13" id="u24148-66">at Maker Faire, New York</span></p>
+      <p id="u24148-70"><span class="credits-termina-13" id="u24148-68">Atta-matic </span><span class="credits-termina-13" id="u24148-69">at NYC Media Lab Summit 2016, New York</span></p>
+      <p id="u24148-75"><span class="credits-termina-13" id="u24148-71">Keybod </span><span class="credits-termina-13" id="u24148-72">and</span><span class="credits-termina-13" id="u24148-73"> Text-neck</span><span class="credits-termina-13" id="u24148-74"> at Erote, Hollow Art Space, Brooklyn</span></p>
+      <p id="u24148-78"><span class="credits-termina-13" id="u24148-76">Atta-matic </span><span class="credits-termina-13" id="u24148-77">at Bushwick Collective 2016, Brooklyn</span></p>
+      <p id="u24148-81"><span class="credits-termina-13" id="u24148-79">Atta-matic</span><span class="credits-termina-13" id="u24148-80"> at Between Spaces, New York</span></p>
+      <p id="u24148-84"><span class="credits-termina-13" id="u24148-82">Lick it </span><span class="credits-termina-13" id="u24148-83">at IndieCade East, Museum of Moving Image, New York</span></p>
+      <p id="u24148-87"><span class="credits-termina-13" id="u24148-85">Dilation </span><span class="credits-termina-13" id="u24148-86">at Parsons Gala 2016, New York</span></p>
+      <p id="u24148-90"><span class="credits-termina-13" id="u24148-88">Atta-matic</span><span class="credits-termina-13" id="u24148-89"> at SXstyle Wearable Technology and Functional Garments Exhibition, SXSW, Austin</span></p>
+      <p id="u24148-96"><span class="credits-termina-13" id="u24148-91">Lick it</span><span class="credits-termina-13" id="u24148-92"> at </span><a class="nonblock" href="http://www.moutharcade.com/mealoffortune"><span class="credits-termina-13" id="u24148-93">Meal of Fortune</span></a><span class="credits-termina-13" id="u24148-95">, Babycastles, New York</span></p>
+      <p id="u24148-97">&nbsp;</p>
+      <p id="u24148-99"><span class="credits-termina-13" id="u24148-98">2015</span></p>
+      <p id="u24148-102"><span class="credits-termina-13" id="u24148-100">Lick it</span><span class="credits-termina-13" id="u24148-101"> at Newline, Babycastles, New York</span></p>
+      <p id="u24148-105"><span class="credits-termina-13" id="u24148-103">Dilation</span><span class="credits-termina-13" id="u24148-104"> at Qualia, Livestream Bushwick, Brooklyn</span></p>
+      <p id="u24148-108"><span class="credits-termina-13" id="u24148-106">Keybod</span><span class="credits-termina-13" id="u24148-107"> at NYC Media Lab Summit 2015, New York</span></p>
+      <p id="u24148-111"><span class="credits-termina-13" id="u24148-109">Keybod</span><span class="credits-termina-13" id="u24148-110"> at Demo Night: Sound + Textiles at Eyebeam, New York</span></p>
+      <p id="u24148-112">&nbsp;</p>
+      <p id="u24148-114"><span class="credits-termina-13" id="u24148-113">2009</span></p>
+      <p id="u24148-117"><span class="credits-termina-13" id="u24148-115">Rest(less)</span><span class="credits-termina-13" id="u24148-116"> at Ploysang 3, TCDC, Bangkok</span></p>
+      <p id="u24148-120"><span class="credits-termina-13" id="u24148-118">Rest(less)</span><span class="credits-termina-13" id="u24148-119"> at Degree show2009, Parc Paragon, Bangkok</span></p>
+      <p id="u24148-121">&nbsp;</p>
+      <p id="u24148-123"><span class="credits-termina-13" id="u24148-122">–</span></p>
+      <p id="u24148-125"><span class="credits-termina-13" id="u24148-124">Organizes</span></p>
+      <p id="u24148-127"><span class="credits-termina-13" id="u24148-126">'Time and Memory' part of Poetic Computation: Seven Years of SFPC, Co-curated with SFPC committee at Westbeth Gallery, New York</span></p>
+      <p id="u24148-128">&nbsp;</p>
+      <p id="u24148-130"><span class="credits-termina-13" id="u24148-129">'Performance Night' part of Poetic Computation: Seven Years of SFPC, Co-curated with Co-curated with Tiri Kananuruk and Sebastian Morales at Westbeth Gallery, New York</span></p>
+      <p id="u24148-131">&nbsp;</p>
+      <p id="u24148-135"><span class="credits-termina-13" id="u24148-132">Artist Talk: Playground Series I - features Brother Nut/ </span><span class="credits-termina-13" id="u24148-133">坚果兄弟</span><span class="credits-termina-13" id="u24148-134">&nbsp;&nbsp;&nbsp; (Co-organized and co-hosted under name Anyways, Here’s The Thing together with zzyw studio) at Anyways, Here’s The Thing Studio, Brooklyn</span></p>
+      <p id="u24148-136">&nbsp;</p>
+      <p id="u24148-138"><span class="credits-termina-13" id="u24148-137">Artist Talk: Playground Series II - &quot;High” Tech (Co-organized and co-hosted under name Anyways, Here’s The Thing together with zzyw studio) at Anyways, Here’s The Thing Studio, Brooklyn</span></p>
+      <p id="u24148-139">&nbsp;</p>
+      <p id="u24148-141"><span class="credits-termina-13" id="u24148-140">Sonic Mesh (Co-organized and co-hosted under name Anyways, Here’s The Thing together with zzyw studio) at Anyways, Here’s The Thing Studio, Brooklyn</span></p>
+      <p id="u24148-142">&nbsp;</p>
+      <p id="u24148-144"><span class="credits-termina-13" id="u24148-143">Mathematics as a Religious Experience (Co-organized&nbsp; with Nabil Hussein, Matt Jacobson,&nbsp; and Lauren Gardner) at SFPC, New York</span></p>
+      <p id="u24148-145">&nbsp;</p>
+     </div>
+     <!-- /m_editable -->
      <div class="clearfix grpelem" id="u24160"><!-- group -->
       <!-- m_editable region-id="editable-static-tag-U24058-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,txtStyleTarget" -->
       <div class="clearfix grpelem" id="u24058-123" data-muse-uid="U24058" data-muse-type="txt_frame" data-IBE-flags="txtStyleSrc"><!-- content -->
@@ -120,7 +185,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
       <!-- /m_editable -->
      </div>
-     <img class="grpelem" id="u24148-147" alt="– Exhibitions and Demos 2021 Keybod and Click-kick (Gallery I, Gallery II), Atta-matic (Online) at An A-historical Daydream 14th A.I.R. Biennial, A.I.R. Gallery, Brooklyn and Online Program, New York 2020 Jit(จิตร) at Homeward Bound, Online Remembering at Poetic Computation: Seven Years of SFPC, Westbeth Gallery, New York 2019 Click-kick at LSC, Women in Science &amp; Art Week, New Jersey Remembering at On Reverse commuting, Brooklyn 2018 Remembering at SFPC, New York Lick it at Chewing Monster, Red Brick Space, New York Remembering at On Collaboration: Creative Technology Exhibition, Macy Art Gallery, New York 2017 Atta-matic at International Symposium on Wearable Computers (ISWC), Maui, Hawaii Atta-matic at LSC After Dark, Liberty of Science, New Jersey Keybod and Click-kick at Put Together, Bodyhacking Con, Austin 2016 Atta-matic at BIOMEDevice Conference, San Jose Atta-matic at Maker Faire, New York Atta-matic at NYC Media Lab Summit 2016, New York Keybod and Text-neck at Erote, Hollow Art Space, Brooklyn Atta-matic at Bushwick Collective 2016, Brooklyn Atta-matic at Between Spaces, New York Lick it at IndieCade East, Museum of Moving Image, New York Dilation at Parsons Gala 2016, New York Atta-matic at SXstyle Wearable Technology and Functional Garments Exhibition, SXSW, Austin Lick it at Meal of Fortune, Babycastles, New York 2015 Lick it at Newline, Babycastles, New York Dilation at Qualia, Livestream Bushwick, Brooklyn Keybod at NYC Media Lab Summit 2015, New York Keybod at Demo Night: Sound + Textiles at Eyebeam, New York 2009 Rest(less) at Ploysang 3, TCDC, Bangkok Rest(less) at Degree show2009, Parc Paragon, Bangkok – Organizes 'Time and Memory' part of Poetic Computation: Seven Years of SFPC, Co-curated with SFPC committee at Westbeth Gallery, New York 'Performance Night' part of Poetic Computation: Seven Years of SFPC, Co-curated with Co-curated with Tiri Kananuruk and Sebastian Morales at Westbeth Gallery, New York Artist Talk: Playground Series I - features Brother Nut/坚果兄弟 (Co-organized and co-hosted under name Anyways, Here’s The Thing together with zzyw studio) at Anyways, Here’s The Thing Studio, Brooklyn Artist Talk: Playground Series II - &quot;High” Tech (Co-organized and co-hosted under name Anyways, Here’s The Thing together with zzyw studio) at Anyways, Here’s The Thing Studio, Brooklyn Sonic Mesh (Co-organized and co-hosted under name Anyways, Here’s The Thing together with zzyw studio) at Anyways, Here’s The Thing Studio, Brooklyn Mathematics as a Religious Experience (Co-organized with Nabil Hussein, Matt Jacobson, and Lauren Gardner) at SFPC, New York " width="496" height="1922" src="images/u24148-147.png?crc=3859210286" data-IBE-flags="txtStyleSrc"/><!-- rasterized frame -->
+     <img class="grpelem" id="u33689-4" alt="จิตร" width="200" height="23" src="images/u33689-4.png?crc=3897676796" data-IBE-flags="txtStyleSrc"/><!-- rasterized frame -->
     </div>
     <div class="clearfix colelem" id="pu26633-4"><!-- group -->
      <a class="nonblock nontext clearfix grpelem" id="u26633-4" href="mailto:nitcha.fame@gmail.com"><!-- content --><p id="u26633-2"><span class="sporting" id="u26633">nitcha.fame[at]gmail.com</span></p></a>
